# goblin_scout

./: .gitignore  Cargo.toml  README.md  tree.txt
src/: errors.rs  extension_mapping.json  git_source.rs  lib.rs  main.rs  markdown_processor.rs  models.rs  utilities.rs
src/assets/: lang_maps.json
src/markdown_processor/: file_processing.rs  mod.rs  repo_info.rs  utilities.rs
src/source/: git.rs
src/tools/: errors.rs  fops.rs  mod.rs  ui.rs
src/trans_md/: code_md.rs  md_json.rs  mod.rs
