[package]
name = "goblin_scout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
walkdir = "2.3.2"
chrono = "0.4"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
